Fixed alignment in select small detail on button

--- a/src/components/button/Button.scss
+++ b/src/components/button/Button.scss
@@ -39,7 +39,7 @@
       display: block;
     }
     &:before {
-      opacity: .4;
+      opacity: .7;
     }
   }
 
